--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,7 @@
     --bs-body-font-weight: 500;
 
     --dark-blue-500: #0b344e;
+    --light-blue-200: #addff5;
     --light-blue-500: #4191b3;
     --pink-500: #fe51b3;
     /*--yellow-500: #f6f4e5;*/
