--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,7 @@
 
     --dark-blue-500: #0b344e;
     --light-blue-200: #addff5;
+    --light-blue-300: #8dd5f4;
     --light-blue-500: #4191b3;
     --pink-500: #fe51b3;
     /*--yellow-500: #f6f4e5;*/
