add: feature trocar pet

--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,7 @@
     --bs-body-font-weight: 500;
 
     --dark-blue-500: #0b344e;
+    --light-blue-80: #edf6fc;
     --light-blue-100: #D1E8F5;
     --light-blue-200: #addff5;
     --light-blue-300: #8dd5f4;
