fix: acoes no perfil do pet e datas

--- a/src/main.css
+++ b/src/main.css
@@ -9,7 +9,9 @@
     --light-blue-200: #addff5;
     --light-blue-300: #8dd5f4;
     --light-blue-500: #4191b3;
+    --pink-450: #ff70c1;
     --pink-500: #fe51b3;
+    --pink-550: #e64aa3;
     /*--yellow-500: #f6f4e5;*/
 }
 
