pack de alteracoes

--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,9 @@
     --light-blue-100: #D1E8F5;
     --light-blue-200: #addff5;
     --light-blue-300: #8dd5f4;
+    --light-blue-400: #09a4e6;
     --light-blue-500: #4191b3;
+    --pink-100: #feddf0;
     --pink-450: #ff70c1;
     --pink-500: #fe51b3;
     --pink-550: #e64aa3;
